WIP: Port Create Dragons Plus from NeoForge 1.21.1 to Forge 1.20.1
- Convert build.gradle from NeoForge ModDev to ForgeGradle 6.0.51
- Update gradle.properties for Forge 1.20.1 + Create 0.5.1.f
- Convert all NeoForge imports to Forge equivalents
- Replace NeoForge-specific APIs (DeferredHolder→RegistryObject, etc.)
- Remove NeoForge-only features (DataMaps, Capabilities, ItemAttributes)
- Remove incompatible mixin targets (dndesires, garnished, neoforge)
- Create Forge mods.toml replacing NeoForge template
- Update mixin JSON for Forge 1.20.1 compatibility
- Convert Create 6.0.x API references to 0.5.1.f equivalents
- Fix config system for Forge config spec pattern

https://claude.ai/code/session_01V3FAAe9XMucRupTzEdtHUz